feat(frontend): new UI
